implementation/testdata/typechecker/error/classes/portfolio_test10.java
//Type Error: function func does not return anything.
int main(){
    return 0;
}

class A{
    int func(){

    }
}